--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "former",
-  "homepage": "https://edouardmisset.github.io/former/",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": "tsc && vite build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "preview": "vite preview"
